# models/oauth-user.js
@@ -7,11 +7,11 @@
  * This software is licensed under the MIT license found in the file LICENSE
  * in the root directory of this repository
  */
-'use strict'
-const Validable = require('validable')
-const Perseest = require('perseest')
-const modHelpers = require('../lib/models-helpers')
-Object.assign(Validable.validate.validators, require('../lib/validators'))
+"use strict";
+const Validable = require("validable");
+const Perseest = require("perseest");
+const modHelpers = require("../lib/models-helpers");
+Object.assign(Validable.validate.validators, require("../lib/validators"));
 
 /** OAuth user entity, with no support for persistence */
 class VolatileOAuthUser extends Validable.Class {
@@ -24,23 +24,25 @@ class VolatileOAuthUser extends Validable.Class {
    * @param {Array<String>} opt.topics - Countries in the user preferences
    */
   constructor(opt = {}) {
-    super()
-    this.id = opt.id
-    this.name = opt.name
-    this.lang = 'en'
-    this.topics = opt.topics || []
-    this.countries = opt.countries || []
-    this.created = opt.created || new Date()
+    super();
+    this.id = opt.id;
+    this.name = opt.name;
+    this.lang = "en";
+    this.topics = opt.topics || [];
+    this.countries = opt.countries || [];
+    this.created = opt.created || new Date();
   }
 
   /** Is the user a OAuth user? (always returns true)
    * @returns {boolean}
    */
-  get oauth() { return true }
+  get oauth() {
+    return true;
+  }
 
   /** Return a string representation of the user */
   toString() {
-    return `Google User ${this.id} (${this.name})`
+    return `Google User ${this.id} (${this.name})`;
   }
 
   /** @returns {object} A sharing-safe representation of this user */
@@ -53,7 +55,7 @@ class VolatileOAuthUser extends Validable.Class {
       created: this.created,
       countries: this.countries,
       oauth: true,
-    }
+    };
   }
 
   /** @constant {object} - Constraints on OAuthUser instance properties */
@@ -62,19 +64,19 @@ class VolatileOAuthUser extends Validable.Class {
       numericality: { greaterThanOrEqualTo: 0, strict: true },
     },
     name: {
-      type: 'string',
+      type: "string",
       presence: { allowEmpty: false },
     },
     lang: {
-      languageCode: true
+      languageCode: true,
     },
     created: {
       datetime: true,
     },
-    exists: { type: 'boolean' },
+    exists: { type: "boolean" },
     topics: { stringArray: true },
     countries: { countryCodeArray: true },
-  }
+  };
 }
 
 /** OAuthUser with persistence capability via the perseest package
@@ -84,30 +86,36 @@ class OAuthUser extends Perseest.Mixin(VolatileOAuthUser) {
   /** @lends OAuthUser */
   /** Create a new persistent user */
   constructor(opt = {}) {
-    super(opt)
-    this.exists = opt.exists || false
+    super(opt);
+    this.exists = opt.exists || false;
   }
 
   /** Database configuration for perseest */
-  static db = new Perseest.Config('OAuthAccount', 'id', [
-    'id', 'name', 'lang', 'countries', 'topics', 'created'
-  ])
+  static db = new Perseest.Config("OAuthAccount", "id", [
+    "id",
+    "name",
+    "lang",
+    "countries",
+    "topics",
+    "created",
+  ]);
 }
 
-OAuthUser.db.row2Entity = row => new OAuthUser(Object.assign(row, { exists: true }))
+OAuthUser.db.row2Entity = (row) =>
+  new OAuthUser(Object.assign(row, { exists: true }));
 
 // Get fields usable as a univocal ID
 OAuthUser.db.ids = function* () {
-  for (const [c, a] of OAuthUser.db.columns) if (a && a.id) yield c
-}
+  for (const [c, a] of OAuthUser.db.columns) if (a && a.id) yield c;
+};
 
-modHelpers.tm2DateAfterFetch(OAuthUser, 'created')
-modHelpers.validateBeforeQuery(OAuthUser)
+modHelpers.tm2DateAfterFetch(OAuthUser, "created");
+modHelpers.validateBeforeQuery(OAuthUser);
 
 // Add format and parser to use validate.js datetime
 Validable.validate.extend(Validable.validate.validators.datetime, {
-  parse: value => new Date(value).valueOf(),
-  format: value => new Date(value),
-})
+  parse: (value) => new Date(value).valueOf(),
+  format: (value) => new Date(value),
+});
 
-module.exports = { OAuthUser, VolatileOAuthUser }
+module.exports = { OAuthUser, VolatileOAuthUser };
